<resources>
    <string name="app_name">MedicaMeApp</string>

    <!-- Strings EnvioRecetaMedica-->
    <string name="fromGalleryText">Adjuntar desde la galería</string>
    <string name="fromCameraText">Tomar foto</string>
    <string name="IntruccionesInicialesEnvioRecetaMedica">A continuación, adjunta tu receta médica</string>
    <string name="InstruccionesSecundariasEnvioRecetaMedica">La misma será revisada por especialistas de tu  entidad, y te asignaremos un punto de recogida, reserva o domicilio.</string>

    <!-- Strings DistribucionYReciclaje-->
    <string name="InstruccionesInicialesDistribucionYReciclaje">Puntos de distribución y reciclaje</string>
    <string name="InstruccionesSecundariasDistribucionYReciclaje">Seleccione la opción correspondiente a lo que quiere visualizar en el mapa.</string>
    <string name="PuntosDeDistribucionDistribucionYReciclaje">Puntos de Distribución</string>
    <string name="PuntosDeReciclajeDistribucionYReciclaje">Puntos de Reciclaje</string>

    <string name="IntruccionesInicialesPuntosDeDistribucion">Puntos de distribución para el medicamento seleccionado</string>
    <string name="IntruccionesSecundariasPuntosDeDistribucion">Seleccione en el nombre de la entidad si quiere comunicarse por chat.</string>

    <string name="IntruccionesInicialesPuntosDeReciclaje">Puntos de reciclaje de medicamentos</string>
    <string name="IntruccionesSecundariasPuntosDeReciclaje">Seleccione el punto de reciclaje del que desea obtener información.</string>

    <string name="medicame">MedicaMe</string>
    <string name="tu_aliado_f">Tu aliado farmacológico</string>
    <string name="unete">Iniciar!</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="Noestaregistrado">¿No está registrado?</string>
    <string name="Registrarse">Registrarse</string>
    <string name="OlvidoContrasena"><u>¿Olvido su contraseña?</u></string>
    <string name="Registro">Registro</string>
    <string name="ReservaMedicamento">Selecciona los medicamentos que deseas reservar</string>
    <string name="ReservaExitosa">Sus medicamentos se reservaron correctamente</string>
    <string name="DomicilioExitoso">Sus medicamentos están en camino</string>
    <string name="title_activity_puntos_de_distribucion">PuntosDeDistribucion</string>
    <string name="title_activity_puntos_de_reciclaje">PuntosDeReciclaje</string>
    <string name="title_activity_domicilioo">DomiciliooActivity</string>
    <string name="TituloSolicitudDomicilio">Solicitud de domicilio</string>
    <string name="IntruccionesSecundariasDomicilio">Ingrese en la barra de búsqueda el lugar a donde quiere que llegue su domicilio.</string>
    <string name="title_activity_reserva_exitosaa">ReservaExitosaa</string>
    <string name="title_activity_domicilio_exitoso_map">DomicilioExitosoMap</string>
    <string name="o_habla_con_un_punto_de_distribuci_n">O habla con un punto de distribución</string>
    <string name="exampleText">Drogueria de mi casa</string>

    <string name="PuntosDeDistribución">Puntos de distribución</string>
    <string name="Usuarios">Usuarios</string>
    <string name="escribe_un_mensaje">Escribe un mensaje...</string>

</resources>