<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/medicame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/medicame"
        android:textAppearance="@style/medicame"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tu_aliado_f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tu_aliado_f"
        android:layout_width="178sp"
        android:layout_height="27sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:text="@string/tu_aliado_f"
        android:textAppearance="@style/tu_aliado_f"
        android:textStyle="bold|italic"
        android:translationY="-2.62sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="143dp"
        app:layout_constraintBottom_toTopOf="@+id/BotonUnete"
        android:layout_marginBottom="40dp"
        />

    <Button
        android:id="@+id/BotonUnete"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:background="@drawable/boton_circular"
        android:text="@string/unete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <ImageView
        android:id="@+id/imagenInicial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:circularflow_viewCenter="@id/BotonUnete"
        app:layout_constraintTop_toBottomOf="@+id/BotonUnete"
        app:srcCompat="@drawable/medic_assistant"
        tools:layout_editor_absoluteX="70dp" />


</androidx.constraintlayout.widget.ConstraintLayout>