<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Autenticacion">

    <ImageView
        android:id="@+id/ImagenLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/Logo" />

    <TextView
        android:id="@+id/iniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IniciarSesion"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ImagenLogo"
        app:layout_constraintStart_toStartOf="@+id/ImagenLogo"
        app:layout_constraintTop_toBottomOf="@+id/ImagenLogo" />

    <EditText
        android:id="@+id/correoInput"
        android:layout_width="331dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="Correo Electronico"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion" />

    <EditText
        android:id="@+id/contrasenaInput"
        android:layout_width="331dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="Contrasena"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoInput" />

    <TextView
        android:id="@+id/noEstaRegistrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/Noestaregistrado"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/contrasenaInput"
        tools:layout_editor_absoluteY="450dp" />

    <TextView
        android:id="@+id/Registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/Registrarse"
        android:textColor="@color/buttonTextColor"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/contrasenaInput"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/noEstaRegistrado"
        tools:layout_editor_absoluteY="450dp" />

    <TextView
        android:id="@+id/OlvidoContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/OlvidoContrasena"
        android:textColor="@color/buttonTextColor"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Registrarse"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="@+id/noEstaRegistrado"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaInput" />

    <Button
        android:id="@+id/iniciarSesionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/VerdeDegradadoButton"
        android:text="@string/IniciarSesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/OlvidoContrasena"
        app:layout_constraintStart_toStartOf="@+id/OlvidoContrasena"
        app:layout_constraintTop_toBottomOf="@+id/OlvidoContrasena" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/iniciarSesionButton"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/iniciarSesionButton"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesionButton"
        app:srcCompat="@drawable/Fingerprint" />

</androidx.constraintlayout.widget.ConstraintLayout>